feat: add API for checking version
